--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -5,14 +5,66 @@
 
 
 body {
-  // display: block;
   min-height: 100vh;
-  // background-image: url(./images/overlook-carpet-top-down.png);
   background-repeat: no-repeat;
   background-size: cover;
-  padding: 5px;
+  padding: 10px;
   color: #fff;
-  font-family: 'Mea Culpa', cursive;
   font-family: 'Six Caps', sans-serif;
   font-size: 40px;
+}
+
+.main-login-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  // background-color: #4b3621;
+  // color: 000000;
+  height: 100vh;
+  width: 100%;
+}
+
+.login-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  // background-color: #FFFAFA;
+  // background-color: #eeeeee;
+  background-color: #191919;
+  border-radius: 5px;
+  font-size: 30px;
+  height: 70%;
+  width: 40%;
+  padding: 10px;
+  // border: 2px solid blue;
+}
+
+.form-element-label {
+  font-size: 40px;
+}
+
+.form-input {
+  width: 40%;
+  height: 10%;
+  border: 2px solid #321414;
+  margin: 20px;
+}
+.login-button {
+  margin-top: 30px;
+  height: 15%;
+  width: 40%;
+  font-size: 60px;
+  border: 3px solid #5b5b5b;
+  box-shadow: 0px 2px 2px #3A231B;
+  font-family: 'Six Caps', sans-serif;
+}
+
+// .user-dashboard-section {
+//
+// }
+
+
+.hidden {
+  display: none;
 }
