--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -14,6 +14,11 @@ body {
   font-size: 40px;
 }
 
+button {
+  cursor: pointer;
+  font-family: 'Six Caps', sans-serif;
+}
+
 .main-login-section {
   display: flex;
   justify-content: center;
@@ -60,10 +65,187 @@ body {
   font-family: 'Six Caps', sans-serif;
 }
 
-// .user-dashboard-section {
-//
-// }
+// DASHBOARD
 
+
+.user-dashboard-section {
+  display: flex;
+  flex-wrap: wrap;
+  height: 100vh;
+  width: 100%;
+}
+
+.dashboard-header {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  color: #fff;
+  height: 20%;
+  width: 100%;
+}
+
+.hotel-name {
+    display: flex;
+    justify-content: center;
+    width: 80%;
+    margin-left: 10%;
+    font-size: 125px;
+    color: #fff;
+}
+
+.user-greeting-and-logout {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: space-between;
+  height: 100%;
+  width: 20%;
+  font-size: 25px;
+
+
+}
+
+.greeting-msg {
+  margin-right: 20px;
+  font-size: 40px;
+}
+
+.nav-logout-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 35%;
+  height: 40%;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  // background-color: #3A231B;
+  font-family: 'Six Caps', sans-serif;
+  border: 2px solid #5b5b5b;
+  border-radius: 5px;
+  box-shadow: 0px 3px 5px #000000;
+  font-size: 40px;
+  // color: #fff;
+}
+
+.left-booking-section {
+  display: flex;
+  flex-direction: column;
+  // justify-content: center;
+  align-items: center;
+  border: 2px solid green;
+  height: 80%;
+  width: 30%;
+}
+
+.book-a-room-button {
+  margin-top: 20px;
+  height: 10%;
+  width: 70%;
+  font-size: 50px;
+  color: #000000;
+  border-radius: 5px;
+  border: 2px solid #5b5b5b;
+  box-shadow: 0px 3px 5px #000000;
+  font-family: 'Six Caps', sans-serif;
+  // background-color: #B0A7A3;
+}
+
+//THIS MIGHT TURN INTO RADIO BUTTONS?
+//TO DISPLAY AVAILABLE ROOMS?
+.select-date-section {
+  display: flex;
+  // flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  // border: 2px solid yellow;
+  height: 20%;
+  width: 90%;
+  margin-top: 15px;
+  font-size: 25px;
+}
+
+.select-date-label {
+  font-size: 40px;
+}
+
+.available-rooms-input {
+  height: 50%;
+  width: 70%;
+}
+
+.available-rooms-div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid pink;
+  height: 60%;
+  width: 80%;
+  padding: 5px;
+  overflow-y: auto;
+}
+
+.available-room-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 2px solid white;
+  width: 90%;
+  margin: 5px;
+}
+
+.select-available-room-button {
+  height: 10%;
+  width: 50%;
+  font-size: 40px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.right-user-booking-log-section {
+  display: flex;
+  justify-content: center;
+  color: #fff;
+  height: 80%;
+  width: 69%;
+}
+
+.customer-bookings-div {
+  display: flex;
+  flex-direction: column;
+  // justify-content: center;
+  align-items: center;
+  background-color: #bcbcbc;
+  opacity: .9;
+  color: #000000;
+  margin-top: 20px;
+  border-radius: 5px;
+  width: 97%;
+  height: 93%;
+  border: 2px solid red;
+}
+
+.display-customer-bookings-div {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  height:93%;
+  width: 97%;
+  border: 2px solid yellow;
+  overflow-y: auto;
+}
+
+.user-booking-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 35%;
+  width: 20%;
+  margin: 10px;
+  border: 2px solid blue;
+  font-size: 40px;
+}
 
 .hidden {
   display: none;
