--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -1,3 +1,4 @@
 // $primary-background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
 // ;
 // $main-background-img: background:url(require());
+$boxShadow: box-shadow: 0px 2px 2px #3A231B;
