--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -119,59 +119,82 @@ button {
   opacity: .9;
 }
 
-.book-a-room-button {
+.book-a-room-heading {
+  @include flexbox(none, center, center);
   @include heightAndWidth(10%, 70%);
   @include fontSize(50px);
-  margin-top: 20px;
-  color: #000000;
+  margin-top: 10px;
+  margin-bottom: 0;
+  color: #fff;
   border-radius: 5px;
-  border: 2px solid #5b5b5b;
-  box-shadow: $box-shadow;
+  border: none;
 }
 
-//THIS MIGHT TURN INTO RADIO BUTTONS?
-//TO DISPLAY AVAILABLE ROOMS?
 .select-date-section {
-  @include flexbox(none, space-around, center);
+  @include flexbox(column, space-around, center);
   @include heightAndWidth(20%, 90%);
   @include fontSize(25px);
-  margin-top: 15px;
+  margin: 10px;
+}
+
+.booking-date-selection-div {
+  @include flexbox(none, center, center);
+  @include fontSize(40px);
+  @include heightAndWidth(40%, 90%);
+  background-color:  #f3f3f3;
+  color: #000000;
+  margin: 5px;
 }
 
 .select-date-label {
   @include flexbox(none, center, center);
   @include fontSize(40px);
-  @include heightAndWidth(52%, 30%);
+  @include heightAndWidth(70%, 30%);
   background-color:  #f3f3f3;
   color: #000000;
+  margin: 5px;
 }
 
 .available-rooms-input {
-  @include heightAndWidth(52%, 70%);
+  @include heightAndWidth(70%, 70%);
   @include fontSize(30px);
   font-family: 'Six Caps', sans-serif;
   background-color: #f3f3f3;
   border: none;
 }
 
+.radio-styling-div {
+  @include flexbox(none, space-around, center);
+}
+
+.radio-button-room-type-div {
+  @include flexbox(none, space-around, center);
+  @include heightAndWidth(18%, 100%);
+}
+
+.radio-button {
+  margin: 10px;
+}
+
 .available-rooms-div {
   @include flexbox(column, center, center);
-  @include heightAndWidth(60%, 80%);
+  @include heightAndWidth(40%, 80%);
   @include fontSize(30px);
   background-color: #f3f3f3;
   overflow-y: auto;
 }
 
 .available-room-card {
-  @include flexbox(column, none, center);
-  @include heightAndWidth(none, 90%);
+  @include flexbox(none, space-around, center);
+  @include heightAndWidth(20%, 90%);
+
   background-color: #990000;
   box-shadow: $box-shadow;
   padding: 5px;
   margin: 5px;
 }
 
-.select-available-room-button {
+.book-available-room-button {
   @include heightAndWidth(10%, 50%);
   @include fontSize(40px);
   margin-top: 10px;
