--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -36,6 +36,7 @@ button {
   @include flexbox(column, center, center);
   @include heightAndWidth(70%, 40%);
   background-color: #660000;
+  border-radius: 5px;
   opacity: .9;
 }
 
@@ -116,6 +117,7 @@ button {
   @include heightAndWidth(79%, 30%);
   background-color: #660000;
   margin-top: 20px;
+  border-radius: 5px;
   opacity: .9;
 }
 
