--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -19,6 +19,7 @@ button {
   cursor: pointer;
   font-family: 'Six Caps', sans-serif;
   border: 2px solid #5b5b5b;
+  border-radius: 5px;
   box-shadow: $box-shadow;
 }
 
@@ -108,8 +109,6 @@ button {
   @include fontSize(40px);
   margin-right: 10px;
   margin-bottom: 10px;
-  border-radius: 5px;
-  box-shadow: $box-shadow;
 }
 
 .left-booking-section {
@@ -134,7 +133,7 @@ button {
 
 .select-date-section {
   @include flexbox(column, space-around, center);
-  @include heightAndWidth(20%, 90%);
+  @include heightAndWidth(30%, 90%);
   @include fontSize(25px);
   margin: 10px;
 }
@@ -142,7 +141,7 @@ button {
 .booking-date-selection-div {
   @include flexbox(none, center, center);
   @include fontSize(40px);
-  @include heightAndWidth(40%, 90%);
+  @include heightAndWidth(20%, 90%);
   background-color:  #f3f3f3;
   color: #000000;
   margin: 5px;
@@ -178,6 +177,18 @@ button {
   margin: 10px;
 }
 
+.search-for-room-button-div {
+  @include flexbox(none, center, center);
+  @include heightAndWidth(20%, 100%);
+  @include fontSize(30px);
+}
+
+.check-availability-button {
+  @include flexbox(none, center, center);
+  @include heightAndWidth(100%, 50%);
+  @include fontSize(30px);
+}
+
 .available-rooms-div {
   @include flexbox(column, center, center);
   @include heightAndWidth(40%, 80%);
@@ -189,7 +200,6 @@ button {
 .available-room-card {
   @include flexbox(none, space-around, center);
   @include heightAndWidth(20%, 90%);
-
   background-color: #990000;
   box-shadow: $box-shadow;
   padding: 5px;
@@ -199,7 +209,7 @@ button {
 .book-available-room-button {
   @include heightAndWidth(10%, 50%);
   @include fontSize(40px);
-  margin-top: 60px;
+  margin-top: 30px;
   margin-bottom: 10px;
   box-shadow: $box-shadow;
 }
