Add message to display on dom if no bookings are available for the selected date and or room type.

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -189,6 +189,12 @@ button {
   @include fontSize(30px);
 }
 
+.no-availability-msg-p-tag {
+  @include fontSize(45px);
+  color: #000000;
+  margin: 10px;
+}
+
 .available-rooms-div {
   @include flexbox(column, center, center);
   @include heightAndWidth(40%, 80%);
