--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -101,7 +101,8 @@ button {
 
 .greeting-msg {
   @include fontSize(40px);
-  margin-right: 20px;
+  margin-right: 10px;
+  margin-top: 10px;
 }
 
 .nav-logout-button {
